- security exception for the external teamspeak viewer added
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@2775 34db09b4-2314-0410-a940-aec02a7c051d

--- a/configuration/phpids_config.ini
+++ b/configuration/phpids_config.ini
@@ -22,11 +22,19 @@
     html[]          = __wysiwyg
 
     ; define which fields shouldn't be monitored (a[b]=c should be referenced via a.b)
+
     exceptions[]    = __utmz
     exceptions[]    = __utmc
+
+    ; Security Exception for the external Teamspeak Viewer. This is a cookie for an doubleclick ad.
+    exceptions[]    = COOKIE.__gads
+    exceptions[]    = REQUEST.__gads
+
     exceptions[]    = POST.mod_data
+
+    ; Security Exception for the Adminmenu Editor (Xulmenu). Tis is a cookie for remembering the opened tree.
     exceptions[]    = COOKIE.opened
-    exceptions[]    = REQUEST.opened    
+    exceptions[]    = REQUEST.opened
 
     ; PHPIDS should run with PHP 5.1.2 but this is untested - set
     ; this value to force compatibilty with minor versions
@@ -37,7 +45,7 @@
 [Logging]
 
     ; file logging
-    path            = IDS_LOG_PATH 
+    path            = IDS_LOG_PATH
 
     ; email logging
 
