--- a/build-tools/phpdoc/clansuite-phpdoc.ini
+++ b/build-tools/phpdoc/clansuite-phpdoc.ini
@@ -1,5 +1,5 @@
-;; clansuite-phpdoc.ini 
-;; phpDocumentor parse configuration file for 
+;; clansuite-phpdoc.ini
+;; phpDocumentor parse configuration file for
 ;; Clansuite Project by Jens-André Koch <jakoch@web.de>
 ;; www.clansuite.com
 
@@ -33,7 +33,7 @@ customtags = @todo, @param,  @note, @implements
 
 ;; what is the main package?
 ;; legal values: alphanumeric string plus - and _
-defaultpackagename = clansuite
+defaultpackagename = Clansuite
 
 ;; limit output to the specified packages, even if others are parsed
 ;; legal values: package names separated by commas
