add zend debugger cookie exception to ids (development)
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3280 34db09b4-2314-0410-a940-aec02a7c051d

--- a/configuration/phpids_config.ini
+++ b/configuration/phpids_config.ini
@@ -25,6 +25,9 @@
 
     exceptions[]    = __utmz
     exceptions[]    = __utmc
+    
+    ; enable Zend Debugger Cookie
+    ; exceptions[]  = ZDEDebuggerPresent
 
     ; Security Exception for the external Teamspeak Viewer. This is a cookie for an doubleclick ad.
     exceptions[]    = COOKIE.__gads
