- added security exception for templateditor to phpids_config.ini
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3452 34db09b4-2314-0410-a940-aec02a7c051d

--- a/configuration/phpids_config.ini
+++ b/configuration/phpids_config.ini
@@ -25,7 +25,7 @@
 
     exceptions[]    = __utmz
     exceptions[]    = __utmc
-    
+
     ; enable Zend Debugger Cookie
     ; exceptions[]  = ZDEDebuggerPresent
 
@@ -33,9 +33,14 @@
     exceptions[]    = COOKIE.__gads
     exceptions[]    = REQUEST.__gads
 
+    ; Security Exception for Module Data (Modulemanager)
     exceptions[]    = POST.mod_data
 
-    ; Security Exception for the Adminmenu Editor (Xulmenu). Tis is a cookie for remembering the opened tree.
+    ; Security Exception for saving Template Content to a new file. [?mod=templatemanager&sub=admin&action=save]
+    exceptions[]    = POST.templateeditor_textarea
+    exceptions[]    = REQUEST.templateeditor_textarea
+
+    ; Security Exception for the Adminmenu Editor (Xulmenu). This is a cookie for remembering the opened tree.
     exceptions[]    = COOKIE.opened
     exceptions[]    = REQUEST.opened
 
