- applied svn:keywords Date Author Id Revision HeadURL

--- a/build-tools/asciidoc/asciidoc-options.ini
+++ b/build-tools/asciidoc/asciidoc-options.ini
@@ -13,6 +13,7 @@ toclevel=3
 icons=1
 iconsdir=../../../images/icons
 linkscss=1
+src_css_style = sh-zellner.css
 
 [titles]
 underlines="__","==","--","~~","^^"
