working news module updated wysiwyg editor to show special-chars correctly added none-formdecorator added getRawValue() to formelements (no htmlspecialchars) added exception for html-code in IDS
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4072 34db09b4-2314-0410-a940-aec02a7c051d

--- a/configuration/phpids_config.ini
+++ b/configuration/phpids_config.ini
@@ -40,6 +40,10 @@
     exceptions[]    = POST.templateeditor_textarea
     exceptions[]    = REQUEST.templateeditor_textarea
 
+    ; News html code
+    exceptions[]    = POST.news_form.news_body
+    exceptions[]    = REQUEST.news_form.news_body
+
     ; Security Exception for the Adminmenu Editor (Xulmenu). This is a cookie for remembering the opened tree.
     exceptions[]    = COOKIE.opened
     exceptions[]    = REQUEST.opened
