- renamed htaccess-simple.txt to .htaccess (active) - added gitignore file and added german language support to asciidoc

--- a/build-tools/asciidoc/asciidoc-options.ini
+++ b/build-tools/asciidoc/asciidoc-options.ini
@@ -3,6 +3,7 @@ tabsize=4
 
 [attributes]
 #encoding=UTF-8
+lang=de
 encoding=ISO-8859-1
 stylesdir=../../../stylesheets
 scriptsdir=../../../javascripts
