--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 # This is a ".htaccess" template for Clansuite
 # SVN: $Id$
 
+# Don't show directory listings for URLs which map to a directory.
 DirectoryIndex index.php
+# Follow symbolic links in this directory.
 Options +FollowSymLinks
 Options -Indexes
 SetEnv TZ Europe/Berlin
@@ -13,8 +15,8 @@ SetEnv TZ Europe/Berlin
     RewriteRule !\.(js|ico|gif|jpg|png|css)$ /index.php [QSA,L]
 </IfModule>
 
-# disable direct access to text, log and template files
-<FilesMatch "(\.txt|\.log$|\.tpl$)">
+# disable direct access to database, config, text, log and template files
+<FilesMatch "\.(txt|log|tpl|sql|xml|ini)$">
 order allow,deny
 deny from all
 </FilesMatch>
