--- a/themes/backend/admin/css/cssbuilder.ini
+++ b/themes/backend/admin/css/cssbuilder.ini
@@ -5,15 +5,15 @@
 ; Jens-André Koch © 2005 - onwards
 ; http://www.clansuite.com/
 ; -----------------------------------------------------------------------------------------------
-; Document   : cssbuilder.ini
-; Description : CSS-Builder Theme informations
+; Document:    cssbuilder.ini
+; Description: CSS-Builder Theme informations
 ; -----------------------------------------------------------------------------------------------
 ; @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
 ; @author     Jens-André Koch <vain@clansuite.com>
 ; @author     Paul Brand <info@isp-tenerife.net>
-; @package      CSFW
-; subpackage    Core
-; @version        1.0
+; @package    CSFW
+; subpackage  Core
+; @version    1.0
 ; -----------------------------------------------------------------------------------------------
 ;
 
@@ -26,7 +26,7 @@ date = "2010/11/05"
 
 ; import-file wenn eine oder mehrere css-dateien importiert werden soll
 ; diese werden nicht komprimiert sondern nur per import eingebunden
-importfile1 = "../../../core/css/form.css'"
+importfile1 = "../../../core/css/form.css"
 importfile2 = ""
 importfile3 = ""
 
