--- a/configuration/phpids_config.ini
+++ b/configuration/phpids_config.ini
@@ -40,6 +40,12 @@
     exceptions[]    = POST.templateeditor_textarea
     exceptions[]    = REQUEST.templateeditor_textarea
 
+    ; Security Exception for saving Settings: Content to file
+    exceptions[]    = POST.mod_settings_configfile
+    exceptions[]    = REQUEST.mod_settings_configfile
+    exceptions[]    = POST.mod_settings_infofile
+    exceptions[]    = REQUEST.mod_settings_infofile
+
     ; News html code
     exceptions[]    = POST.news_form.news_body
     exceptions[]    = REQUEST.news_form.news_body
