- removed _load_stylesheet from cssbuilder - fix for xulmenu on menu/widget_menu.tpl

--- a/themes/frontend/standard/css/cssbuilder_ie.ini
+++ b/themes/frontend/standard/css/cssbuilder_ie.ini
@@ -5,15 +5,15 @@
 ; Jens-André Koch © 2005 - onwards
 ; http://www.clansuite.com/
 ; -----------------------------------------------------------------------------------------------
-; Document   : cssbuilder.ini
-; Description : CSS-Builder Theme informations
+; Document     cssbuilder.ini
+; Description  CSS-Builder Theme informations
 ; -----------------------------------------------------------------------------------------------
 ; @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
 ; @author     Jens-André Koch <vain@clansuite.com>
 ; @author     Paul Brand <info@isp-tenerife.net>
-; @package      CSFW
-; subpackage    Core
-; @version        1.0
+; @package    CSFW
+; @subpackage Core
+; @version    1.0
 ; -----------------------------------------------------------------------------------------------
 ;
 
@@ -23,7 +23,6 @@ description = "Theme CSS-Files for building one compact theme importfile"
 version = "1.0"
 author = "Clansuite CSS-Builder"
 date = "2010/11/05"
-
 
 ; name der core css without .css
 cssname = "import_patch"
