--- a/themes/frontend/standard/css/cssbuilder.ini
+++ b/themes/frontend/standard/css/cssbuilder.ini
@@ -5,15 +5,15 @@
 ; Jens-André Koch © 2005 - onwards
 ; http://www.clansuite.com/
 ; -----------------------------------------------------------------------------------------------
-; Document   : cssbuilder.ini
-; Description : CSS-Builder Theme informations
+; Document     cssbuilder.ini
+; Description  CSS-Builder Theme informations
 ; -----------------------------------------------------------------------------------------------
 ; @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
 ; @author     Jens-André Koch <vain@clansuite.com>
 ; @author     Paul Brand <info@isp-tenerife.net>
-; @package      CSFW
-; subpackage    Core
-; @version        1.0
+; @package    CSFW
+; @subpackage Core
+; @version    1.0
 ; -----------------------------------------------------------------------------------------------
 ;
 
@@ -36,5 +36,4 @@ files = "
     core/core.css,
     screen/content.css,
     screen/forum.css,
-    plugins/xulmenu.css
 "
