- formatting - additionFiles to additionalFiles

--- a/themes/core/css/csfw/cssbuilder.ini
+++ b/themes/core/css/csfw/cssbuilder.ini
@@ -45,5 +45,5 @@ files = "
 
 ; zusätzliche css dateien aus anderen speicherorten, die importiert werden sollen,
 ; diese werden nur importiert nicht compiliert
-; Grund: wenn in den additionFiles image angaben sind, stimmt sonst der imagepfad nicht
-additionFiles = ""
+; Grund: wenn in den additionalFiles image angaben sind, stimmt sonst der imagepfad nicht
+additionalFiles = ""
