--- a/themes/core/css/csfw/cssbuilder_ie.ini
+++ b/themes/core/css/csfw/cssbuilder_ie.ini
@@ -5,14 +5,14 @@
 ; Jens-André Koch © 2005 - onwards
 ; http://www.clansuite.com/
 ; -----------------------------------------------------------------------------------------------
-; Document   : cssbuilder_ie.ini
-; Description : CSS-Builder informations
+; Document:    cssbuilder_ie.ini
+; Description: CSS-Builder informations
 ; -----------------------------------------------------------------------------------------------
-; @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
-; @author     Paul Brand <info@isp-tenerife.net>
-; @package      CSFW
-; subpackage    Core
-; @version        1.0
+; @license     GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
+; @author      Paul Brand <info@isp-tenerife.net>
+; @package     CSFW
+; @subpackage  Core
+; @version     1.0
 ; -----------------------------------------------------------------------------------------------
 ;
 
@@ -31,6 +31,8 @@ path = "themes/core/css/"
 
 ; css files inl. pfad ausgehend von der path-definition
 files = "
+    csdw/1-base/reset.css,
+    
     csfw/1-base/core_base.css,
     csfw/1-base/patch/patch_core_base_ie.css,
 
